# AprendizajePorRefuerzos

./: .gitignore  .pre-commit-config.yaml  1_introduccion_al_aprendizaje_por_refuerzos.ipynb  2_aprendizaje_por_refuerzos_profundo.ipynb  Complemento_DRL.ipynb  Final-Lab.ipynb  LICENSE  MidTerm-Lab.ipynb  README.md  lab_0_warmup_rl.ipynb  lab_1_intro_rl.ipynb  lab_2_decision_transformer.md  lab_2_stable_baselines.ipynb  notebook.tex  pyproject.toml  python37_rl.yml  stable_baselines.ipynb  tensorflow.yml
Introducción al Aprendizaje por Refuerzos/: Introducción al Aprendizaje por Refuerzos (I).ipynb  Introducción al Aprendizaje por Refuerzos (II).ipynb  Introducción al Aprendizaje por Refuerzos (III).ipynb  Introducción al Aprendizaje por Refuerzos.ipynb  notebook.tex
agents/: DQNRegressor.py  QLearning.py  QLearning_RandomForestRegressor.py  QLearning_SGDRegressor.py  RLAgent.py  SGDRegressor.py
agents/cart_pole_approx_vf/: CartPole_DQN.py  CartPole_DQN2.py  CartPole_SGD.py  CartPole_SGD_Poly.py  CartPole_SGD_Poly_Dual.py
agents/cart_pole_aprox_vf/: CartPole_ApproxVF_DQN_Agent.py  CartPole_ApproxVF_RandomForestRegressor_Agent.py  CartPole_ApproxVF_SGDRegressor_Agent.py  CartPole_DQN.py  CartPole_DeepQNetwork_Test.py  CartPole_OpenAI_0.py  CartPole_RandomForest_Test.py  CartPole_SGD.py  CartPole_SGD_Test.py  cartpole_aprox_main_script.py
agents/cart_pole_tabular_agent/: CartPoleTabularAgent.py  cartpole_main_script.py
agents/cliff_walking_agent/: CliffWalkingAgent.py  cliffwalking_main_script.py  cliffwalking_one_script.py
agents/frozen_lake_agent/: FrozenLakeAgent.py  frozenlake_main_script.py
agents/utils/: __init__.py
agents/utils/memory/: ReplayMemory.py  __init__.py
archive/agents/: Complemento_DRL.ipynb  __init__.py  lab_2_stable_baselines.ipynb
archive/agents/cart_pole_approx_vf/: CartPole_SGD_Poly.py  CartPole_SGD_Poly_Dual.py
archive/agents/utils/: __init__.py  plotting.py
archive/agents/windy_gridworld_agent/: windy_grid_world.py
tp_decision_transformer/: 01_README_TRABAJO_PRACTICO.md  02_GUIA_IMPLEMENTACION_GRUPOS.md  03_REFERENCIA_COMPLETA.md  04_IMPLEMENTACION_HUGGINGFACE.md  GUIA_IMPLEMENTACION_GRUPOS.md  README_TRABAJO_PRACTICO.md  TRABAJO_PRACTICO_DECISION_TRANSFORMER.md  config_dataset.py
tp_decision_transformer/data/groups/: mu_goodreads16.csv  mu_goodreads8.csv  mu_ml10m16.csv  mu_ml10m8.csv  mu_netflix16.csv  mu_netflix8.csv  mu_netflixM8.csv  num_goodreads16.csv  num_goodreads8.csv  num_ml10m16.csv  num_ml10m8.csv  num_netflix16.csv  num_netflix8.csv  num_netflixM8.csv  sigma_goodreads16.csv  sigma_goodreads8.csv  sigma_ml10m16.csv  sigma_ml10m8.csv  sigma_netflix16.csv  sigma_netflix8.csv  sigma_netflixM8.csv  v_goodreads16.csv  v_goodreads8.csv  v_ml10m16.csv  v_ml10m8.csv  (+2 more)
(+2 files in other folders)
