[tool.poetry]
name = "aprendizaje_por_refuerzos"
version = "2023.0.1"
description = ""
authors = [
    "Juan Cruz Barsce <jbarsce@gmail.com>",
    "Jorge Palombarini <palombarini@gmail.com>",
    "Ezequiel Beccaria <ezequielbeccaria@gmail.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "<3.11, >=3.9"
gymnasium = "^0.29.1"
"stable-baselines3" = { extras = ["extra"], version = "^2.1.0" }
rl-zoo3 = { version = "^2.1.0", optional = true }
seaborn = { version = "^0.12.2", optional = true }  # required by rl-zoo3
scipy = {version = "^1.11.2", optional = true}  # required by rl-zoo3

[tool.poetry.dev-dependencies]
ipdb = { version = "*", optional = true }
jupyterlab = { version = "*", optional = true }

[tool.poetry.extras]
zoo = ["rl-zoo3", "seaborn", "scipy"]
dev_tools = ["jupyterlab", "ipdb"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
